# libxls

./: .gitignore  CMakeLists.txt  config.h.in
include/libxls/: brdb.h  endian.h  ole.h  xlstool.h
include/libxls/windows/: unistd.h
src/: ole.c  xls.c  xls2csv.c  xlstool.c
test/: test.c
